--- a/ShareModel/src/main/resources/templates/frontstage/home.html
+++ b/ShareModel/src/main/resources/templates/frontstage/home.html
@@ -9,10 +9,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-<div layout:fragment="content" style="width:90%;">
-    <div>
-        <h1>用户管理</h1>
+    <div layout:fragment="content">
+        <section class="container">
+            <div class="row">
+                <div class="section-heading">
+                    <h2>Our Services</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="featured-box">
+                        <i class="fa fa-eye fa-2x"></i>
+                        <div class="text">
+                            <h3>Renting</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="featured-box">
+                        <i class="fa fa-quote-right fa-2x"></i>
+                        <div class="text">
+                            <h3>Selling</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="featured-box">
+                        <i class="fa fa-arrows fa-2x"></i>
+                        <div class="text">
+                            <h3>Investing</h3>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="news-box top-margin">
+            <div class="container">
+                <div class="row">
+                    <div class="section-heading">
+                        <h2>Current Projects</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="newsBox">
+                            <div class="thumbnail">
+                                <!--<figure><img src="assets/images/news2.jpg" alt=""></figure>-->
+                                <div class="caption maxheight2">
+                                    <div class="box_inner">
+                                        <div class="box">
+                                            <p class="title"><strong>CONCEPT</strong></p>
+                                            <p>Lorem ipsum dolor sit amet, conc tetu er adipi scing. Praesent ves tibuum molestie lacuiirhs. Aenean.</p>
+                                        </div>
+                                        <div>
+                                            <a href="#" class="btn-inline">more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="newsBox">
+                            <div class="thumbnail">
+                                <!--<figure><img src="assets/images/news3.jpg" alt=""></figure>-->
+                                <div class="caption maxheight2">
+                                    <div class="box_inner">
+                                        <div class="box">
+                                            <p class="title"><strong>DESIGN</strong></p>
+                                            <p>Lorem ipsum dolor sit amet, conc tetu er adipi scing. Praesent ves tibuum molestie lacuiirhs. Aenean.</p>
+                                        </div>
+                                        <div>
+                                            <a href="#" class="btn-inline">more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="newsBox">
+                            <div class="thumbnail">
+                                <!--<figure><img src="assets/images/news4.jpg" alt=""></figure>-->
+                                <div class="caption maxheight2">
+                                    <div class="box_inner">
+                                        <div class="box">
+                                            <p class="title"><strong>INSTALLATION</strong></p>
+                                            <p>Lorem ipsum dolor sit amet, conc tetu er adipi scing. Praesent ves tibuum molestie lacuiirhs. Aenean.</p>
+                                        </div>
+                                        <div>
+                                            <a href="#" class="btn-inline">more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-</div>
 </body>
 </html>
