--- a/ShareModel/src/main/resources/templates/frontstage/layout/header.html
+++ b/ShareModel/src/main/resources/templates/frontstage/layout/header.html
@@ -27,7 +27,7 @@
                         <h2 class="text-center text-uppercase last">Lorem ipsum dolor sit amet consectetur </h2>
                         <p class="text-center last">Lorem ipsum dolor sit amet in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         <div class="search-panel">
-                            <form class="form-inline" role="form">
+                            <form class="form-inline" role="form" action="/login" method="post">
                                 <div class="form-group">
                                     <input id="dity" type="text" class="form-control" placeholder="City" autocomplete="off"/>
                                 </div>
