--- a/ShareModel/src/main/resources/static/css/style.css
+++ b/ShareModel/src/main/resources/static/css/style.css
@@ -1,63 +1,97 @@
-.header-nav{background-color: #799F61}
-.navbar-default{background:none;border: none;margin: 0px;}
-.navbar-default .navbar-collapse, .navbar-default .navbar-form{border:none;padding: 0}
-.navbar-nav{float:none}
-.navbar-default .navbar-nav > li > a{color: #FFF;padding:18px 80px;font-size:14px}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{color:#fff;background-color: #E8BB2E}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {color: #fff;}
+.header-nav {
+	background-color: #799F61
+}
+
+.navbar-default {
+	background: none;
+	border: none;
+	margin: 0px;
+}
+
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+	border: none;
+	padding: 0
+}
+
+.navbar-nav {
+	float: none
+}
+
+.navbar-default .navbar-nav > li > a {
+	color: #FFF;
+	padding: 18px 80px;
+	font-size: 14px
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+	color: #fff;
+	background-color: #E8BB2E
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+	color: #fff;
+}
+
 .hvr-bounce-to-bottom {
-    display: inline-block;
-    vertical-align: middle;
-    position: relative;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
 }
+
 .hvr-bounce-to-bottom:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #E8BB2E;
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    -webkit-transform-origin: 50% 0;
-    transform-origin: 50% 0;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #E8BB2E;
+	-webkit-transform: scaleY(0);
+	transform: scaleY(0);
+	-webkit-transform-origin: 50% 0;
+	transform-origin: 50% 0;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
 }
+
 .hvr-bounce-to-bottom:hover, .hvr-bounce-to-bottom:focus, .hvr-bounce-to-bottom:active {
-    color: white;
+	color: white;
 }
+
 .hvr-bounce-to-bottom:hover:before, .hvr-bounce-to-bottom:focus:before, .hvr-bounce-to-bottom:active:before {
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-    -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-    transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+	-webkit-transform: scaleY(1);
+	transform: scaleY(1);
+	-webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+	transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
 }
-.head-box{
-    background: #00A3D7;
-    padding: 35px 0;
+
+.head-box {
+	background: #00A3D7;
+	padding: 35px 0;
 }
-.head-box h2{
-    color: #FFFFFF;
-    font-size: 23px;
+
+.head-box h2 {
+	color: #FFFFFF;
+	font-size: 23px;
 }
-.head-box p{
-    color: #ECECEC;
-    font-size: 17px;
+
+.head-box p {
+	color: #ECECEC;
+	font-size: 17px;
 }
