--- a/ShareModel/src/main/resources/templates/frontstage/layout/header.html
+++ b/ShareModel/src/main/resources/templates/frontstage/layout/header.html
@@ -46,6 +46,7 @@
                             <button type="submit" class="btn btn-default">Sign in</button>
                         </form>
                     </div>
+                    <h4 th:text="${msg}"></h4>
                 </div>
             </div>
         </div>
