--- a/ShareModel/src/main/resources/templates/backstage/main.html
+++ b/ShareModel/src/main/resources/templates/backstage/main.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      layout:decorate="~{backstage/layout/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>后台</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Home</title>
 </head>
 <body>
-    <h1>后台首页</h1>
+<div layout:fragment="content">
+    <h1>后台页面</h1>
+</div>
 </body>
 </html>
