--- a/ShareModel/src/main/resources/templates/backstage/layout/header.html
+++ b/ShareModel/src/main/resources/templates/backstage/layout/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
    <header th:fragment="header">
-       <nav class="navbar navbar-static-top navbar-inverse">
+       <nav class="navbar navbar-static-top">
            <div class="container-fluid">
                <!-- Brand and toggle get grouped for better mobile display -->
                <div class="navbar-header">
@@ -13,7 +13,7 @@
                    </button>
                    <a class="navbar-brand" href="#">Brand</a>
                </div>
-               <ul class="nav navbar-nav navbar-right">
+               <ul class="nav navbar-navsf navbar-right">
                    <li class="dropdown">
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                        <ul class="dropdown-menu">
